# fastapi_luchanos

./: docker-compose.yaml  main.py  pyproject.toml
