[tool.poetry]
name = "fastapi-luchanos"
version = "0.1.0"
description = ""
authors = ["Mikhail Denisov <denisovmvtmb@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["standart"], version = "^0.115.6"}
alembic = "^1.14.0"
uvicorn = "^0.34.0"
envparse = "^0.2.0"
asyncpg = "^0.30.0"
pydantic = {extras = ["email"], version = "^2.10.4"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
